--- a/internal/http/html/index.templ
+++ b/internal/http/html/index.templ
@@ -14,6 +14,7 @@ templ Index() {
 			<link rel="stylesheet" type="text/css" href="/assets/styles/styles.css"/>
 			<title>auto-repair</title>
 			<script src="https://unpkg.com/htmx.org@1.9.10" integrity="sha384-D1Kt99CQMDuVetoL1lrYwg5t+9QdHe7NLX/SoJYkXDFfX37iInKRy5xLSi8nO7UC" crossorigin="anonymous"></script>
+			<script src="https://unpkg.com/htmx.org/dist/ext/json-enc.js"></script>
 		</head>
 		<script>
 			htmx.logAll();
