--- a/internal/http/html/sign-up.templ
+++ b/internal/http/html/sign-up.templ
@@ -2,15 +2,16 @@ package html
 
 import (
 	"github.com/falagansoftware/auto-repair/pkg/translator"
+	"fmt"
 )
 
-templ SignUp(i18n translator.LangTranslations) {
+templ SignUp(lang string, i18n translator.LangTranslations) {
 	@Index() {
-		<div class="grid grid-cols-1 place-content-center min-h-screen">
+		<div id="sign-up-container" class="grid grid-cols-1 place-content-center min-h-screen">
 			<div class="max-w-md m-auto">
 				<h1 class="text-sky-800 mb-6 text-6xl font-extrabold text-center">{ i18n["app-name"] }</h1>
 				<h1 class="text-gray-500 mb-6 text-4xl text-center">{ i18n["signup"] }</h1>
-				<form hx-post="/signup">
+				<form hx-post={ fmt.Sprintf("/signup?lang=%s", lang) } hx-ext="json-enc" hx-target="#sign-up-container">
 					<div class="mb-4">
 						@FormInput("name", "text", i18n["name"], "signup-name")
 					</div>
@@ -28,7 +29,11 @@ templ SignUp(i18n translator.LangTranslations) {
 					</div>
 					<div class="flex items-center justify-between">
 						@Button(i18n["register"], "submit", "signup-button")
-						@Link(i18n["already-signup"], "/signin", "signup-signin-link")
+						if lang != "" {
+							@Link(i18n["already-signup"], fmt.Sprintf("/signin?lang=%s", lang), "signup-signin-link")
+						} else {
+							@Link(i18n["already-signup"], "/signin", "signup-signin-link")
+						}
 					</div>
 				</form>
 			</div>
